fixes for direct linking to posts
backend/routes/endpoints.js:
  '/post/:id' => '/post/:title'
  fix description of endpoint

backend/routes/posts.js:
  summary >> 140 chars, fix
  get post by title, instead of id
  find and update by friendlyURL (title)

frontend/package-lock.json:
  npm update

frontend/src/App.jsx:
  add lookUp + lookUpReceived state var to pass as props
  on callPost, set lookUp + lookUpReceived
  pass lookUp + lookUpReceived as props to Display

frontend/src/components/Fragments/Post.jsx:
  remove 'truncate' className

frontend/src/components/Fragments/Posts.jsx:
  add 'container' className

frontend/src/components/views/Display.jsx:
  add qs + ready local state vars
  getPostByTitle() for direct post linking
  on componentDidUpdate(), logic to receive post by title, set ready
  remove styleFix, wordBreak
  set author + post on this.props.location.post
  enclosed createdAt + updatedAt in blockquote

frontend/src/index.css:
  add sitewide word-break style (break-word); annoyance during testing

TODO:
  add About page editing, store in backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,7 @@
 body .full-post {
   margin-bottom: 40px;
 }
+
+body {
+  word-break: break-word;
+}
